Added new schema of JOSN

--- a/index.html
+++ b/index.html
@@ -12,20 +12,27 @@
         <img class="logo" src="https://www.ionos.de/modules/frontend-skin-thunder/img/components/header/vi-logo.svg" alt="logo" />
     </header>
     <section class="container">
-    <aside>
-        <h2>Options</h2>
-        <div class="options"></div>
-
-        <h2>Tags</h2>
-        <div class="tags"></div>
-    </aside>
-    <main>
-        <h2>Viewport
-            <button class="inc-viewport">+</button>
-            <button class="dec-viewport">-</button>
-        </h2>
-        <div class="viewport"></div>
-    </main>
+        <aside>
+            <div class="box">
+                <h2>Options</h2>
+                <div class="body options"></div>
+            </div>
+            <div class="box">
+                <h2>Tags</h2>
+                <div class="body tags"></div>
+            </div>
+            <div class="box">
+                <h2>Settings</h2>
+                <div class="body">
+                    <label>Zoom</label>
+                    <button class="inc-viewport">+</button>
+                    <button class="dec-viewport">-</button>
+                </div>
+            </div>
+        </aside>
+        <main>
+            <div class="viewport"></div>
+        </main>
     </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="./assets/js/script.js"></script>
