--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
     <section class="container">
         <aside>
             <div class="box">
-                <h2>Measurements</h2>
+                <h2>Measurement</h2>
                 <div class="body">
-                    <label>Measurement: </label>
                     <select class="measurements"></select>
                     <span class="btn-details">Show Details</span>
                 </div>
