--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <div class="body">
                     <select class="measurements"></select>
                     <span class="btn-details">Show Details</span>
+                    <div class="box-details"></div>
                 </div>
             </div>
             <div class="box">
