html: Add a link to github in the description of IBNBD
Signed-off-by: Danil Kipnis <danil.kipnis@cloud.ionos.com>

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
         </div>
     </section>
     <section class="intro-dialog">
-        <h1>IBNBD Performance Evaluation</h1>
+        <h2>IBNBD Performance Evaluation</h2>
         <p>
-            IBNBD (InfiniBand Network Block Device) is a linux kernel driver enabling for accessing a remote block device over RDMA network. We developed IBNBD and IBTRS (InfiniBand transport library) as an open source project with low IO latency as the main design criteria. While other open source solutions, such as SRP or NVMEoF do provide similar functionality, IBNBD is showing significantly higher performance in both domains - IO latency and throughput. IBNBD and the underlying general purpose IBTRS library are available for everybody under GPL 2.0 licence.
+            <a href="https://github.com/ionos-enterprise/ibnbd">IBNBD</a> (InfiniBand Network Block Device) is a linux kernel driver enabling for accessing a remote block device over RDMA network. We developed IBNBD and IBTRS (InfiniBand transport library) as an open source project with low IO latency as the main design criteria. While other open source solutions, such as SRP or NVMEoF do provide similar functionality, IBNBD is showing significantly higher performance in both domains - IO latency and throughput. IBNBD and the underlying general purpose IBTRS library are available for everybody under GPL 2.0 licence.
         </p>
     </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
