assets: fix hard linked logo - add logo locally
Signed-off-by: Danil Kipnis <danil.kipnis@cloud.ionos.com>

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="https://www.ionos.de/modules/frontend-skin-thunder/img/components/header/vi-logo.svg" alt="logo" />
+        <img class="logo" src="./assets/images/logo-1and1-ionos-white.svg" alt="logo" />
         <span class="header-title">IBNBD Performance Evaluation</span>
     </header>
     <section class="container">
