Added "do not show again" checkbox to the intro popup

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <title>IBNBD Performance Evaluation</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
+
 <body>
     <header>
         <img class="logo" src="./assets/images/logo-1and1-ionos-white.svg" alt="logo" />
@@ -45,10 +47,24 @@
     <section class="intro-dialog">
         <h2>IBNBD Performance Evaluation</h2>
         <p>
-            <a href="https://github.com/ionos-enterprise/ibnbd">IBNBD</a> (InfiniBand Network Block Device) is a linux kernel driver enabling for accessing a remote block device over RDMA network. We developed IBNBD and IBTRS (InfiniBand transport library) as an open source project with low IO latency as the main design criteria. While other open source solutions, such as SRP or NVMEoF do provide similar functionality, IBNBD is showing significantly higher performance in both domains - IO latency and throughput. IBNBD and the underlying general purpose IBTRS library are available for everybody under GPL 2.0 licence.
+            <a href="https://github.com/ionos-enterprise/ibnbd">IBNBD</a> (InfiniBand Network Block Device) is a linux
+            kernel driver enabling for accessing a remote block device over RDMA network. We developed IBNBD and IBTRS
+            (InfiniBand transport library) as an open source project with low IO latency as the main design criteria.
+            While other open source solutions, such as SRP or NVMEoF do provide similar functionality, IBNBD is showing
+            significantly higher performance in both domains - IO latency and throughput. IBNBD and the underlying
+            general purpose IBTRS library are available for everybody under GPL 2.0 licence.
         </p>
+
+        <div class="do-not-show">
+            <label>
+                <input type="checkbox" class="control" />
+                Do not show this again
+            </label>
+            <button>close</button>
+        </div>
     </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="./assets/js/script.js"></script>
 </body>
+
 </html>
