index: rename to RNBD/RTRS
Signed-off-by: Danil Kipnis <danil.kipnis@cloud.ionos.com>

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>IBNBD Performance Evaluation</title>
+    <title>RNBD/RTRS Performance Evaluation</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 
 <body>
     <header>
         <img class="logo" src="./assets/images/logo-1and1-ionos-white.svg" alt="logo" />
-        <span class="header-title">IBNBD Performance Evaluation</span>
+        <span class="header-title">RNBD/RTRS Performance Evaluation</span>
     </header>
     <section class="container">
         <aside>
@@ -45,14 +45,14 @@
         </div>
     </section>
     <section class="intro-dialog">
-        <h2>IBNBD Performance Evaluation</h2>
+        <h2>RNBD/RTRS Performance Evaluation</h2>
         <p>
-            <a href="https://github.com/ionos-enterprise/ibnbd">IBNBD</a> (InfiniBand Network Block Device) is a linux
-            kernel driver enabling for accessing a remote block device over RDMA network. We developed IBNBD and IBTRS
-            (InfiniBand transport library) as an open source project with low IO latency as the main design criteria.
-            While other open source solutions, such as SRP or NVMEoF do provide similar functionality, IBNBD is showing
-            significantly higher performance in both domains - IO latency and throughput. IBNBD and the underlying
-            general purpose IBTRS library are available for everybody under GPL 2.0 licence.
+            RNBD (RDMA Network Block Device) is a linux
+            kernel driver enabling for accessing a remote block device over RDMA network. We developed RNBD and RTRS
+            (RDMA transport library) as an open source project with low IO latency as the main design criteria.
+            While other open source solutions, such as SRP or NVMEoF do provide similar functionality, RNBD is showing
+            significantly higher performance in both domains - IO latency and throughput. RNBD and the underlying
+            general purpose RTRS library are part of Linux Kernel and available for everybody under GPL 2.0 licence.
         </p>
 
         <div class="do-not-show">
